# OpenCloud

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  OpenCloud.sln  README.md  configuration.dsc.yaml
.cmake/: ProjectConfiguration.cmake
.github/workflows/: build.yml  msbuild.yml  ninja.yml  pr.yml
.msvc/: All.Compile.props  Application.Configuration.props  Base.Compile.props  Base.Configuration.props  Base.Globals.props  Base.Link.props  Base.Targets.props  Debug.Compile.props  Debug.Configuration.props  FastDebug.Compile.props  Release.Compile.props  Release.Configuration.props  Release.Link.props  StaticLibrary.Configuration.props  template.vcxproj
code/: CMakeLists.txt
code/common/: CMakeLists.txt  aligned_allocator.h  bits.h  clock.cc  clock.h  common.exports.props  common.vcxproj  common.vcxproj.filters  console.cc  console.h  console_logger.cc  console_logger.h  constants.h  data_stream.cc  data_stream.h  debug.cc  debug.h  dictionary.h  dynamic_library.cc  dynamic_library.h  file_helpers.cc  file_helpers.h  helpers.h  log.cc  log.h  macros.h  math.h  platform.h  rectangle.h  result.h  scoped_function.h  strings.cc  strings.h  synchro.cc  synchro.h  types.h  window_handle.h
code/common/math/: _matrix.h  _vector.h  _vector_common.h  _vector_cxp.h  _vector_math.h  _vector_sse.h  _vector_swizzle.inl  _vector_swizzle3.inl
code/d3d11/: context.cc  context.h  d3d11.vcxproj  helpers.h  renderer.cc  renderer.h  texture.cc  texture.h
code/data/: CMakeLists.txt  data.exports.props  data.vcxproj  data.vcxproj.filters  hd.h  img.h  pak.h
code/data/iso/: datetime.h  dirent.h  dual_endian.h  stream.cc  stream.h  types.h  volume.h
code/dc2/: CMakeLists.txt  camera.cc  camera.h  character.cc  character.h  character_func.cc  character_func.h  collision.cc  collision.h  convviewlp.cc  dbg_font.h  dng_debug.cc  dng_event.cc  dng_event.h  dng_main.cc  dng_main.h  dngmenu.cc  dngmenu.h  editctrl.cc  editctrl.h  editdata.cc  editdata.h  editeff.cc  editeff.h  editloop.cc  editloop.h  editmap.cc  editmap.h  editmenu.cc  editmenu.h  editmode.cc  effect.cc  effect.h  effect_script.cc  effect_script.h  event.cc  event.h  event_edit.cc  event_edit.h  event_func.cc  (+95 more)
code/dc2/mg/: mg_camera.cc  mg_camera.h  mg_frame.cc  mg_frame.h  mg_lib.cc  mg_lib.h  mg_math.cc  mg_math.h  mg_memory.cc  mg_memory.h  mg_tanime.cc  mg_tanime.h  mg_texture.cc  mg_texture.h
code/engine/: CMakeLists.txt  camera.cc  camera.h  character.cc  character_func.cc  character_func.h  collision.cc  collision.h  convviewlp.cc  convviewlp.h  dbg_font.cc  dng_debug.cc  dng_event.cc  dng_event.h  dng_main.cc  dng_main.h  dngmenu.cc  dngmenu.h  editctrl.cc  editctrl.h  editdata.cc  editdata.h  editeff.cc  editeff.h  editloop.cc  editloop.h  editmap.cc  editmap.h  editmenu.cc  editmenu.h  editmode.cc  effect.cc  effect.h  effect_script.cc  effect_script.h  engine.exports.props  engine.vcxproj  engine.vcxproj.filters  event.cc  event.h  (+88 more)
code/engine/character/: CActionChara.cc  CActionChara.h  CCharacter2.cc  CCharacter2.h  CDACollision.h  CDynamicAnime.cc  CDynamicAnime.h  CSwordAfterEffect.h  character.cc  character.h
code/engine/mg/: mg_camera.cc  mg_camera.h  mg_frame.cc  mg_frame.h  mg_lib.cc  mg_lib.h  mg_math.cc  mg_math.h  mg_memory.cc  mg_tanime.cc  mg_tanime.h  mg_texture.cc  mg_texture.h
code/graph/: CMakeLists.txt  api.h  graph.exports.props  graph.vcxproj  matrix.h  rectangle.h  renderer.h  texture.cc  texture.h  texture_pool.cc  texture_pool.h  vector.h
code/graph/_vector/: _vector_common.h  _vector_cxp.h  _vector_math.h  _vector_math.inl  _vector_operators.inl  _vector_sse.h  _vector_swizzle.inl  _vector_swizzle2.inl  _vector_swizzle4.inl
code/host/: CMakeLists.txt  host.vcxproj  host_interface_base.cc  host_interface_base.h  host_interface_dwm.cc  host_interface_dwm.h  host_interface_x11.cc  host_interface_x11.h  linux_pad_handler.cc  linux_pad_handler.h  linuxmain.cc  pad_handler.cc  pad_handler.h  winmain.cc  xinput_pad_handler.cc  xinput_pad_handler.h
code/renderer/: context.cc  context.h  renderer.exports.props  renderer.vcxproj  shader.cc  shader.h  swapchain.cc  swapchain.h  texture.cc  texture.h  types.h
code/script/: CMakeLists.txt  analyzer.cc  analyzer.h  bytecode.h  file.h  script.vcxproj  script.vcxproj.filters  stack.h
code/script/rs/: analyzer.cc  analyzer.h  bytecode.h  file.h  stack.h
code/version/: .gitignore  CMakeLists.txt  version.cc.tpl  version.vcxproj
code/vk/: api.cc  api.h  format.h  helpers.cc  helpers.h  loader.cc  loader.h  vk.vcxproj
common/: alignment.h  common.exports.props  common.vcxproj  console.cc  console.h  console_logger.cpp  debug.cc  debug.h  file_helpers.cc  file_helpers.h  log.cc  log.h  scoped_function.h  strings.cc  strings.h  types.h
conda/: cli.cc  conda.vcxproj  conda.vcxproj.filters  img.h  pak.h
conda/iso9660/: iso_file.cc  iso_file.h
dc2/: CCharacter2.cc  CCharacter2.h  CDngFloorManager.cc  CDngFloorManager.h  CDynamicAnime.cc  CDynamicAnime.h  CEditData.h  CEffect.cc  CEffect.h  CEffectManager.cc  CEffectManager.h  CEffectScriptMan.h  CFishAquarium.h  CFont.cc  CFont.h  CGameData.cc  CGameData.h  CGameDataUsed.h  CGamePad.cc  CGamePad.h  CInventUserData.h  CMap.cc  CMap.h  CMapInfo.cc  CMapInfo.h  CMdsListSet.cc  CMdsListSet.h  CMenuSystemData.h  CMonsterBox.h  CPadControl.h  CQuestData.h  CSaveData.h  CSaveDataDungeon.h  CScene.cc  CScene.h  CScriptInterpreter.cc  CScriptInterpreter.h  CUserDataManager.h  CVillager.h  ClsMes.h  (+184 more)
generators/: CMakeLists.txt  gen_scm_version.rb  gen_swizzle_functions.rb  gen_vk_formatters.rb
generators/lib/: template.rb
generators/templates/: enum_formatters.erb  header_comment.erb  header_includes.erb
generators/version/: CMakeLists.txt  version.exports.props  version.h  version.vcxproj
host/: host.vcxproj  texture.cc  texture.h  winmain.cc
resource/: releases.json
test/: mg_camera_test.cc  mg_math_test.cc  script_interpreter_test.cc  test.vcxproj
tools/: data_extractor.cc  data_extractor.h  extract-iso.cc  extract_iso.cc  extract_iso.vcxproj
(+19 files in other folders)
