cmake_minimum_required(VERSION 3.20)

project(OpenCloudDC2)
add_library(${PROJECT_NAME} STATIC)

target_sources(
    ${PROJECT_NAME}
    PRIVATE
    # ROOT
    "camera.cc"
    "character_func.cc"
    "character.cc"
    "collision.cc"
    "convviewlp.cc"
    "dbg_font.cc"
    "dng_debug.cc"
    "dng_event.cc"
    "dng_main.cc"
    "dngmenu.cc"
    "editctrl.cc"
    "editdata.cc"
    "editeff.cc"
    "editloop.cc"
    "editmap.cc"
    "editmenu.cc"
    "editmode.cc"
    "effect_script.cc"
    "effect.cc"
    "event_edit.cc"
    "event_func.cc"
    "event.cc"
    "fishing.cc"
    "fishingobj.cc"
    "font.cc"
    "gamedata.cc"
    "gamepad.cc"
    "globals.cc"
    "gyorace.cc"
    "helpmes.cc"
    "inventmn.cc"
    "io.cc"
    "ls_mes.cc"
    "mainloop.cc"
    "mainloop3.cc"
    "map.cc"
    "mapjump.cc"
    "mds_img.cc"
    "menuaqua.cc"
    "menucapt.cc"
    "menuchr.cc"
    "menucls1.cc"
    "menudraw.cc"
    "menumain.cc"
    "menumap.cc"
    "menuop.cc"
    "menuquest.cc"
    "menusave.cc"
    "menushop.cc"
    "menusys.cc"
    "monster_func.cc"
    "monster.cc"
    "movie.cc"
    "movieviewlp.cc"
    "nameregi.cc"
    "nowload.cc"
    "npc.cc"
    "object_anime.cc"
    "object.cc"
    "pbuggy.cc"
    "photo.cc"
    "pot.cc"
    "quest.cc"
    "rain.cc"
    "robopart.cc"
    "run_script.cc"
    "scene.cc"
    "script_interpreter.cc"
    "snd_mngr.cc"
    "subgame.cc"
    "sysmes.cc"
    "title.cc"
    "userdata.cc"
    "villager.cc"
    "vlgr_info.cc"
    
    "camera.h"
    "character_func.h"
    "character.h"
    "collision.h"
    "convviewlp.h"
    "dbg_font.h"
    "dng_debug.h"
    "dng_event.h"
    "dng_main.h"
    "dngmenu.h"
    "editctrl.h"
    "editdata.h"
    "editeff.h"
    "editloop.h"
    "editmap.h"
    "editmenu.h"
    "editmode.h"
    "effect_script.h"
    "effect.h"
    "event_edit.h"
    "event_func.h"
    "event.h"
    "fishing.h"
    "fishingobj.h"
    "font.h"
    "gamedata.h"
    "gamepad.h"
    "globals.h"
    "gyorace.h"
    "helpmes.h"
    "inventmn.h"
    "io.h"
    "ls_mes.h"
    "mainloop.h"
    "mainloop3.h"
    "map.h"
    "mapjump.h"
    "mds_img.h"
    "menuaqua.h"
    "menucapt.h"
    "menuchr.h"
    "menucls1.h"
    "menudraw.h"
    "menumain.h"
    "menumap.h"
    "menuop.h"
    "menuquest.h"
    "menusave.h"
    "menushop.h"
    "menusys.h"
    "monster_func.h"
    "monster.h"
    "movie.h"
    "movieviewlp.h"
    "nameregi.h"
    "nowload.h"
    "npc.h"
    "object_anime.h"
    "object.h"
    "pbuggy.h"
    "photo.h"
    "pot.h"
    "quest.h"
    "rain.h"
    "robopart.h"
    "run_script.h"
    "sce_temp.h"
    "scene.h"
    "script_interpreter.h"
    "snd_mngr.h"
    "subgame.h"
    "sysmes.h"
    "title.h"
    "userdata.h"
    "villager.h"
    "vlgr_info.h"
    "weapon.h"

    # MG
    "mg/mg_camera.cc"
    "mg/mg_frame.cc"
    "mg/mg_lib.cc"
    "mg/mg_math.cc"
    "mg/mg_memory.cc"
    "mg/mg_tanime.cc"
    "mg/mg_texture.cc"

    "mg/mg_camera.h"
    "mg/mg_frame.h"
    "mg/mg_lib.h"
    "mg/mg_math.h"
    "mg/mg_memory.h"
    "mg/mg_tanime.h"
    "mg/mg_texture.h"
)

target_link_libraries(${PROJECT_NAME} PRIVATE ProjectConfiguration OpenCloudCommon OpenCloudHost)

if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive") # To allow aliasing of enum and member 'opcode' in bytecode.h/class instruction
endif()
